--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "flickcurl-1.23.tar.gz": 56dd6ae8fad8dfa98b43ab9b3d3f623dada9b67b
+  flickcurl-1.26.tar.gz: 547480030ce4f777bb35d98b43fe15ee3eeae0e0
